Move files around so that Rack can serve index.html from the place it thinks it should be

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <canvas id="chunk-game" height="600" width="800"></canvas>
 
-  <script type="text/javascript" src="chunk.js"></script>
-  <script type="text/javascript" src="snake.js"></script>
+  <script type="text/javascript" src="js/chunk.js"></script>
+  <script type="text/javascript" src="js/snake.js"></script>
 </body>
 </html>
